# opentui_rust

./: .gitignore  AGENTS.md  CHANGELOG.md  COVERAGE.md  Cargo.toml  EXISTING_OPENTUI_STRUCTURE.md  FEATURE_PARITY.md  IMPLEMENTATION_REPORT.md  PLAN_TO_PORT_OPENTUI_TO_RUST.md  PROPOSED_RUST_ARCHITECTURE.md  README.md  UPGRADE_LOG.md  beads_import.md  claude-upgrade-progress.json  codecov.yml
.beads/: issues.jsonl
.github/: dependabot.yml
benches/: buffer.rs  color.rs  highlight.rs  input.rs  renderer.rs  text.rs  unicode.rs  workloads.rs
docs/: DEMO_SHOWCASE_DESIGN_SYSTEM.md  DEMO_SHOWCASE_KEYBINDINGS.md  DEMO_SHOWCASE_RESILIENCE.md  DEMO_SHOWCASE_SPEC.md  DEMO_SHOWCASE_TOUR.md  TEST_HARNESS.md
examples/: 01_hello_terminal.rs  02_colors.rs  03_styles.rs  04_drawing.rs  05_scissor.rs  06_opacity.rs  07_input.rs  08_animation.rs  09_text_buffer.rs  11_highlighting.rs  15_dashboard.rs  README.md  editor.rs  hello.rs  repro_row0_glitch.rs  threaded.rs
fuzz/: Cargo.toml
golden_outputs/: test_hash.txt
scripts/: bench.sh  benchmark_baseline.sh  benchmark_regression.sh  conformance.sh  demo_showcase_ci.sh  demo_showcase_e2e_pty.sh  demo_showcase_verify.sh  test_examples.sh
src/: cell.rs  color.rs  error.rs  grapheme_pool.rs  lib.rs  link.rs  style.rs
target-sagebeacon/: .rustc_info.json
tests/: benchmark_comparison.rs  benchmarks_validate.rs  buffer_edge_cases.rs  cell_tests.rs  conformance.rs  demo_showcase_snapshots.rs  e2e_input_flow.rs  e2e_input_output.rs  e2e_perf.rs  e2e_render_cycle.rs  e2e_unicode.rs  e2e_workflows.rs  examples_compile.rs  pty_e2e.rs  (+11 more)
(+459 files in other folders)
