[package]
name = "opentui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-performance terminal UI library"
license = "MIT"
repository = "https://github.com/anomalyco/opentui"
keywords = ["tui", "terminal", "ui", "cli"]
categories = ["command-line-interface", "rendering"]

[dependencies]
bitflags = "2.10"
libc = "0.2.180"
ropey = "1.6"
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.9"
insta = { version = "1.46", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "color"
harness = false

[[bench]]
name = "text"
harness = false

[[bench]]
name = "renderer"
harness = false

[[bench]]
name = "unicode"
harness = false

[[bench]]
name = "highlight"
harness = false

[[bench]]
name = "workloads"
harness = false

[[bench]]
name = "input"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
